<resources>
    <string name="app_name">My Application</string>
    <string name="txt_action_ads">This action can contain ads...</string>
    <string name="txt_select_language">Select Language</string>
    <string name="txt_english">English</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_next">Next</string>
    <string name="txt_title_one">Take notes and\nreview at any time</string>
    <string name="txt_title_two">To-do list for\nthe near future</string>
    <string name="txt_title_three">Use as a personal diary,\nrecord every moment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_note">Note</string>
    <string name="txt_ask_add">Any notes to add? Add your first note by\nclicking on add button.</string>
    <string name="txt_reminder">Reminder</string>
    <string name="txt_archive">Archive</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_search">Search</string>
    <string name="txt_empty">It’s empty here!</string>
    <string name="txt_trash_bin">Trash Bin</string>
    <string name="txt_trash">Trash</string>
    <string name="txt_content_trash">Your deleted notes will be shown here</string>
    <string name="txt_other">Others</string>
    <string name="txt_shortcuts">Shortcuts</string>
    <string name="txt_content_shortcuts">Show shortcuts in notification bar</string>
    <string name="txt_notification">App notification</string>
    <string name="txt_content_notification">Get new updates and usage tips</string>
    <string name="txt_language">Language</string>
    <string name="text_date">09.27.2021,</string>
    <string name="text_time">15:06 pm</string>
    <string name="txt_category">Category</string>
    <string name="title">Title</string>
    <string name="txt_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ac_edit_content_note">ac_edit_content_note</string>
    <string name="text_banner_collapse">Banner collapse</string>
    <string name="font">Font</string>
    <string name="txt_sise_default">18</string>
    <string name="todo">TODO</string>
    <string name="txt_default_font">Courgette</string>
    <string name="txt_attachment">Attachment</string>
    <string name="txt_image">Image</string>
    <string name="txt_video">Video</string>
    <string name="txt_document">Document</string>
    <string name="txt_choose_categories">Choose Categories</string>
    <string name="txt_add_new_category">Add new category</string>
    <string name="txt_home">Home</string>
    <string name="txt_add_category">Add category</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="txt_start_record">start record</string>
    <string name="save_recorder">save recorder</string>
    <string name="duration">Duration</string>
    <string name="clear">clear</string>
    <string name="emoji">Emoji</string>
    <string name="play_audio">Play Audio</string>
    <string name="image_preview">image preview</string>
    <string name="_1_6_checked_item">+1/6 checked item</string>
    <string name="duplicate_note">duplicate note</string>
    <string name="archive_note">archive note</string>
    <string name="trash_note">Trash note</string>
    <string name="all">All</string>
    <string name="_06_03_2022_14_48_pm">14:48 PM</string>
    <string name="add_check_list">Add check list</string>
    <string name="enter_task_content">enter content here</string>
    <string name="select_time">Get select time</string>
    <string name="txt_vn">Vietnamese</string>
    <string name="txt_korea">Korea</string>
    <string name="txt_restore">Restore</string>
    <string name="txt_delete">Delete</string>

</resources>
