<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:id="@+id/tv_att"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_attachment"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_choose_video"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/bg_attachment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_att">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/_14dp"
                android:text="@string/txt_video"
                app:drawableTopCompat="@drawable/ic_video" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_choose_image"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_attachment"
            app:layout_constraintEnd_toStartOf="@+id/layout_choose_video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_att"
            app:layout_constraintTop_toTopOf="@+id/layout_choose_video">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/_14dp"
                android:text="@string/txt_image"
                app:drawableTopCompat="@drawable/ic_image" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_choose_document"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_attachment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_choose_video"
            app:layout_constraintTop_toBottomOf="@+id/tv_att"
            app:layout_constraintTop_toTopOf="@+id/layout_choose_video">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/_14dp"
                android:text="@string/txt_document"
                app:drawableTopCompat="@drawable/ic_document" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>