<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReminderFragment"
    android:paddingHorizontal="@dimen/_16dp"
    >

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_reminder"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/img_calendar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/img_more"
            android:contentDescription="TODO"
            android:src="@drawable/ic_calendar" />

        <ImageButton
            android:id="@+id/img_more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="8dp"
            android:src="@drawable/ic_more"
            />

    </RelativeLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/edit_search"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@+id/header_title"

        android:hint="@string/txt_search"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="4dp"
        android:textSize="15sp"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginVertical="8dp"



        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_add"
        android:background="@drawable/img_remider_empty"
        app:layout_constraintTop_toBottomOf="@+id/edit_search"
        app:layout_constraintStart_toStartOf="@+id/edit_search"
        app:layout_constraintEnd_toEndOf="@+id/edit_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empty"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toStartOf="@+id/img_add"
        app:layout_constraintEnd_toEndOf="@id/img_add"
        app:layout_constraintTop_toBottomOf="@+id/img_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>